--- a/src/app/components/selector/selector.component.html
+++ b/src/app/components/selector/selector.component.html
@@ -1,7 +1,2 @@
-<p>
-    <i class="material-icons">arrow_left</i>
 
-    <span></span>
-
-    <i class="material-icons">arrow_right</i>
-</p>
+<p>selector works!</p>
