--- a/src/app/components/selector/selector.component.html
+++ b/src/app/components/selector/selector.component.html
@@ -1,2 +1,2 @@
 
-<p>selector works!</p>
+<p><i class="material-icons" (click)="go(-1)">arrow_left</i><span>{{ dateService.date | async | moment }}</span><i class="material-icons" (click)="go(1)">arrow_right</i></p>
