--- a/src/app/components/calendar/calendar.component.pug
+++ b/src/app/components/calendar/calendar.component.pug
@@ -1,1 +1,15 @@
-p calendar works!
+table
+    thead
+        tr
+            th  Sun
+            th  Mon
+            th  Tue
+            th  Wen
+            th  Thu
+            th  Fri
+            th  Sat
+
+    tbody
+        tr(*ngFor="let week of calendar")
+            td(*ngFor="let day of week.days", [class.disabled]="day.disabled", (click)="select(day.value)")
+                span([class.selected]="day.selected", [class.active]="day.active") {{ day.value | moment: 'ddd DD'}}
