--- a/src/app/components/organizer/organizer.component.pug
+++ b/src/app/components/organizer/organizer.component.pug
@@ -1,1 +1,18 @@
-p organizer works!
+section
+  header
+    | Organizer: 
+    strong {{dateService.date | async | moment:'DD.MM.YYYY'}}
+    hr
+  main
+    ul(*ngIf='tasks.length; else noTasks')
+      li.task(*ngFor='let task of tasks; let i = index')
+        span
+          strong {{i + 1}}
+          |           {{task.title}}
+        button.btn.btn-primary((click)='remove(task)') Remove
+    ng-template(#noTasks='')
+      p.text-center No tasks yet...
+  footer
+    form((ngSubmit)='submit()', [formGroup]='form')
+      input(type='text', formControlName='title')
+      button.btn.btn-primary.btn-block(type='submit', [disabled]='form.invalid') Add
