--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
 
-<div class="container">
-  <header class="header">
-    <selector></selector>
-  </header>
-  <main>
-    <calendar></calendar>
-  </main>
-  <div>
-    <organizer></organizer>
-  </div>
-</div>
+<router-outlet></router-outlet>
